GH-902 Proxy token from starters to master